# Generic-RANSAC

./: CMakeLists.txt
include/: ransac.h
include/demo/: circle_demo.h  image_demo.h
include/models/: circle.h  homography.h  line2.h
include/util/: image.h
src/: main.cpp
src/demo/: circle_demo.cpp  image_demo.cpp
test/models/: circle_test.cpp  homography_test.cpp  line2_test.cpp
